--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,7 +26,8 @@ dependencies:
   dio: ^3.0.7  # 网络请求框架
   flutter_swiper: ^1.1.6  # 轮播图
   flutter_webview_plugin: ^0.3.10
-
+  flutter_staggered_grid_view: ^0.3.0
+  cached_network_image: ^2.0.0-rc
 
 
 dev_dependencies:
@@ -46,9 +47,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #  - images/a_dot_burr.jpeg
-  #  - images/a_dot_ham.jpeg
+  assets:
+   - assets/images/
+   - assets/json/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
