--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,10 +25,10 @@ dependencies:
   cupertino_icons: ^0.1.2
   dio: ^3.0.7  # 网络请求框架
   flutter_swiper: ^1.1.6  # 轮播图
-  flutter_webview_plugin: ^0.3.10
-  flutter_staggered_grid_view: ^0.3.0
+  flutter_webview_plugin: ^0.3.10 
+  flutter_staggered_grid_view: ^0.3.0 #瀑布布局
   cached_network_image: ^2.0.0-rc
-
+  fluttertoast: ^3.1.3   #弹框
 
 dev_dependencies:
   flutter_test:
